--- a/Ceriyo.Toolset/Windows/DataEditorWindow.xaml
+++ b/Ceriyo.Toolset/Windows/DataEditorWindow.xaml
@@ -67,6 +67,26 @@
                     </Components:AnimationEditorComponent>
                 </Grid>
             </TabItem>
+            <TabItem Header="Abilities">
+                <Grid Background="#FFE5E5E5">
+                    <Components:AbilityEditorComponent
+                        x:Name="abilityEditor"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch">
+
+                    </Components:AbilityEditorComponent>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Skills">
+                <Grid Background="#FFE5E5E5">
+                    <Components:SkillEditorComponent
+                        x:Name="skillEditor"
+                        HorizontalAlignment="Stretch"
+                        VerticalAlignment="Stretch">
+
+                    </Components:SkillEditorComponent>
+                </Grid>
+            </TabItem>
         </TabControl>
         <Button Content="OK" HorizontalAlignment="Left" Margin="375,8,0,0" Grid.Row="1" VerticalAlignment="Top" Width="99" Click="OK"/>
         <Button Content="Cancel" HorizontalAlignment="Left" Margin="479,8,0,0" Grid.Row="1" VerticalAlignment="Top" Width="99" Click="Cancel"/>
