Ability + skill editor, creature editor logic

--- a/Ceriyo.Toolset/Components/AbilityEditorComponent.xaml
+++ b/Ceriyo.Toolset/Components/AbilityEditorComponent.xaml
@@ -6,6 +6,102 @@
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="700" Background="White">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="145"></ColumnDefinition>
+            <ColumnDefinition Width="145"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="120"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="184*"></RowDefinition>
+            <RowDefinition Height="149*"></RowDefinition>
+            <RowDefinition Height="167*"></RowDefinition>
+        </Grid.RowDefinitions>
+
+
+        <ListBox x:Name="lbAbilities"
+    		Grid.Column="0"
+    		Grid.Row="0"
+            Grid.RowSpan="3"
+            Height="Auto"
+            Width="Auto"
+    		BorderBrush="Black" 
+    		ItemsSource="{Binding Abilities}"
+    		SelectedItem="{Binding SelectedAbility, Mode=TwoWay}"
+            SelectionChanged="AbilitySelected"
+    		DisplayMemberPath="Name"
+            Margin="0,27,0,41"/>
+        <Label Content="Abilities:" 
+               HorizontalAlignment="Left" 
+               Margin="10,0,0,0" 
+               VerticalAlignment="Top" 
+               Height="26" 
+               Width="81"/>
+        <Button x:Name="btnNew"
+    		Content="New"
+    		HorizontalAlignment="Left" 
+    		Margin="10,0,0,10" 
+    		VerticalAlignment="Bottom" 
+            Grid.Row="2"
+            Click="New"
+    		Width="52" 
+            Height="22"/>
+        <Button x:Name="btnDelete"
+    		Content="Delete" 
+    		Grid.Row="2"
+    		HorizontalAlignment="Left" 
+    		Margin="83,0,0,10" 
+    		VerticalAlignment="Bottom" 
+            Click="Delete"
+    		IsEnabled="{Binding IsAbilitySelected}"
+    		Width="52" Height="22"/>
+        <TextBox x:Name="txtName" 
+            Grid.Column="1"
+        	HorizontalAlignment="Left" 
+        	Height="23" 
+        	TextWrapping="Wrap" 
+        	Text="{Binding SelectedAbility.Name}" 
+        	IsEnabled="{Binding IsAbilitySelected}"
+        	VerticalAlignment="Top" 
+        	Width="135" Margin="5,41,0,0"/>
+        <Label Content="Name:" 
+               HorizontalAlignment="Left" 
+               Grid.Column="1"
+               VerticalAlignment="Top" 
+               Height="26" 
+               Width="44" Margin="5,10,0,0"/>
+        <TextBox x:Name="txtTag" 
+        	HorizontalAlignment="Left" 
+        	Height="23" 
+            Grid.Column="1"
+        	TextWrapping="Wrap" 
+        	Text="{Binding SelectedAbility.Tag}" 
+        	IsEnabled="{Binding IsAbilitySelected}"
+        	VerticalAlignment="Top" 
+        	Width="135" Margin="5,95,0,0"/>
+        <Label Content="Tag:" 
+               HorizontalAlignment="Left" 
+               Grid.Column="1"
+               VerticalAlignment="Top" 
+               Height="26" 
+               Width="32" Margin="5,69,0,0"/>
+        <TextBox x:Name="txtResref" 
+        	HorizontalAlignment="Left" 
+        	Height="23"
+        	TextWrapping="Wrap" 
+        	Text="{Binding SelectedAbility.Resref}" 
+        	IsEnabled="{Binding IsAbilitySelected}"
+        	VerticalAlignment="Top" 
+        	Width="135" Margin="5,154,0,0" Grid.Column="1"/>
+        <Label Content="Resref:" 
+               HorizontalAlignment="Left"
+               VerticalAlignment="Top" 
+               Height="26" 
+               Width="45" Margin="5,123,0,0" Grid.Column="1"/>
+
+
+
     </Grid>
 </UserControl>
